<resources>
    <string name="app_name">UniStud</string>
    <string name="facebook_app_id">1994735643972371</string>
    <string name="fb_login_protocol_scheme">fb1994735643972371</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--ABOUT STRINGS-->
    <string name="title_contributors">Contributors:</string>
    <string name="member_albjon">Albjon Gjuzi</string>
    <string name="member_arba">Arba Hoxha</string>
    <string name="member_aurel">Aurel Hoxha</string>
    <string name="member_eniselda">Eniselda Tusku</string>
    <string name="project_location">Bilkent University\nAnkara,Turkey</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_organization_home">Home</string>
    <string name="nav_organization_internships">Internships</string>
    <string name="nav_student_opportunities">Opportunities</string>
    <string name="nav_organization_events">Events</string>
    <string name="nav_organization_profile">Profile</string>
    <string name="nav_student_university">Universities</string>
    <string name="nav_student_tutorials">Tutorials</string>
    <string name="nav_student_trade">UniTrade</string>

    <string name="nav_about_us">About Us</string>
    <string name="nav_log_out">Logout</string>
    <string name="server_ip">139.179.206.73</string>

    <string name="action_add_internship">Add Internship</string>
    <string name="action_add_event">Add Event</string>
    <string name="action_add_tutorial">Add Tutorial</string>
    <string name="action_add_univeristy">Add University</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_check_uni">Check Messages</string>
    <!--CALENDAR STRINGS-->
    <string name="dialog_calendar">ADD NEW EVENT</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_organization_item_activity_titles">
        <item>Home</item>
        <item>Internships</item>
        <item>Events</item>
        <item>Profile</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_student_item_activity_titles">
        <item>Home</item>
        <item>Universities</item>
        <item>Internships</item>
        <item>Tutorials</item>
        <item>UniTrade</item>
        <item>Events</item>
        <item>Profile</item>
    </string-array>

    <string name="trade">UniTrade</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="view_details">View Details</string>
    <string name="action_remove">Remove from Favorites</string>

</resources>
